5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1879.log
== TEST (2019-05-01 16:10:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = 500
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
	elif (h<=400):
		x = 100
		y = ((nhe) - (1/4*nhnt)) + x
		h = round(y,2)
	print(h, "extras e", nhnt, "de falta")
	print("R$", x)
-- ERROR:
File "XXXX", line 11
    elif (h<=400):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:11:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = 500
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
elif (h<=400):
	x = 100
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
print(h, "extras e", nhnt, "de falta")
print("R$", x)
-- OUTPUT:
915.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:12:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = 500
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
elif (h<=400):
	x = 100
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", x)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:12:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = 500
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
elif (h<=400):
	x = 100
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", x)
-- EXECUTION TIME:
0.205989
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:12:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = 500
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
elif (h<=400):
	x = 100
	y = ((nhe) - (1/4*nhnt)) + x
	h = round(y,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", x)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:14:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = h+500
	h = round(x,2)
elif (h<=400):
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", x)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:15:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = h+500
	h = round(x,2)
elif (h<=400):
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", h)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:19:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = h+500
	h = round(x,2)
elif (h<=400):
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", nht)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print("R$", nht)
NameError: name 'nht' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:19:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	x = h+500
	h = round(x,2)
elif (h<=400):
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", nhe)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 420.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:20:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	g = 500
	x = h+500
	h = round(x,2)
elif (h<=400):
	g = 100
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", g)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:21:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	g = 500
	x = h+500
	h = round(x,2)
elif (h<=400):
	g = 100
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", g)
-- EXECUTION TIME:
0.140472
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:21:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	g = 500
	x = h+500
	h = round(x,2)
elif (h<=400):
	g = 100
	x = h+100
	h = round(x,2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", g)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 16:25:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	g = round(500.00, 2)
else:
	g = round(100.00, 2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", g)
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 16:25:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
nhe = float(input("numero de horas extras: "))
nhnt = float(input("numero de horas faltadas: "))

h = (nhe) - (1/4*nhnt)

if (h>400):
	g = round(500.00, 2)
else:
	g = round(100.00, 2)
print(nhe, "extras e", nhnt, "de falta")
print("R$", g)
-- EXECUTION TIME:
0.125195
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
